# KoKoRoo

./: .gitignore  ARCHITECTURE.md  CHANGELOG.unreleased.md  CLAUDE.md  Cargo.toml  Cargo.toml.linux  Cargo.toml.macos  Cargo.toml.windows  FEATURES.md  KNOWN_ISSUES.md  MAC_BUILD.md  PHASES.md  README.md  build.rs  bundle-macos.sh  checklist.md  debilidades.md  features.md  hostelid-v0.1.md
src/: avatar.rs  chat.rs  crypto.rs  firewall.rs  group.rs  group_voice.rs  gui.rs  identity.rs  logger.rs  main.rs  platform.rs  sck_audio.rs  screen.rs  sysaudio.rs  sysfirewall.rs  theme.rs  ui.rs  voice.rs  wayland_capture.rs
src/audio/: devices.rs  mod.rs  pipewire_capture.rs  process_loopback.rs  sck.rs  system.rs
src/filetransfer/: mod.rs  protocol.rs  receiver.rs  sender.rs
src/groupcall/: engine.rs  mod.rs  p2p.rs  relay.rs
src/gui/: call.rs  contacts.rs  error.rs  groups.rs  logs.rs  messages.rs  mod.rs  network.rs  notifications.rs  popups.rs  profile.rs  requests.rs  settings.rs  sidebar.rs
src/gui/groups/: create.rs  detail.rs  helpers.rs  mod.rs  settings.rs  sidebar.rs  voice.rs
src/messaging/: commands.rs  daemon.rs  housekeep.rs  mod.rs  outbox.rs  packets.rs  pending_deletes.rs  pending_invites.rs  protocol.rs  session.rs
src/screen/: mod.rs  wayland.rs
