[package]
name = "hostelD"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"          # cross-platform audio (mic + speakers)
ringbuf = "0.4"        # lock-free ring buffer to pass audio between threads
crossterm = "0.28"     # terminal raw mode, key events, colors
audiopus = "0.3.0-rc.0" # opus codec bindings (voice compression)
x25519-dalek = { version = "2", features = ["static_secrets"] } # X25519 key exchange
chacha20poly1305 = "0.10"  # AEAD encryption (same cipher as TLS 1.3, WireGuard)
sha2 = "0.10"              # SHA-256 for verification codes
rand = "0.8"               # cryptographically secure random
eframe = "0.29"            # egui framework — simple flat cross-platform GUI
serde = { version = "1", features = ["derive"] }  # serialization for contacts/chat
serde_json = "1"           # JSON for contacts storage
